Oppdatert lenker med kule bilder

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
      <div class="right">
         <ul class="links">
-            <li><a href="https://google.com">header link one</a></li>
-            <li><a href="https://google.com">header link two</a></li>
-            <li><a href="https://google.com">header link three</a></li>
+            <li><a href="https://upload.wikimedia.org/wikipedia/commons/1/15/Cat_August_2010-4.jpg">header link one</a></li>
+            <li><a href="https://upload.wikimedia.org/wikipedia/commons/1/15/Cat_August_2010-4.jpg">header link two</a></li>
+            <li><a href="https://upload.wikimedia.org/wikipedia/commons/1/15/Cat_August_2010-4.jpg">header link three</a></li>
         </ul>
      </div>
     </div>
