--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
      </div>
     </div>
 
+    <div class="header-content">
+        <div class="hc-main1">
+            <div class="hc-box1">This website is awesome</div>
+            <div class="hc-box2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="hc-button">Sign up</button>
+        </div>
+        <div class="hc-main2">
+            <div class="hc-box3">this is a placeholder for an image</div>
+        </div>
+    </div>
+
+
+    <div class="top">
+        <div class="top-info"></div>
+        <div class="top-content">
+            <div class="top-box">
+                <div class="tb-1"></div>
+                <div class="tb-2"></div>
+                <div class="tb-2"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle">
+        <div class="middle-content">
+            <div class="mc-box"></div>
+        </div>
+    </div>
+
+    <div class="bottom">
+        <div class="bottom-content-1"></div>
+        <div class="bottom-content-2"></div>
+    </div>
+
+    <div class="footer">
+        
+    </div>
+    
 
 
 </body>
