--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
      </div>
     </div>
 
+
+
+
+
     <div class="header-content">
         <div class="hc-main1">
             <div class="hc-box1">This website is awesome</div>
@@ -39,21 +43,30 @@
 
 
     <div class="top">
-        <div class="top-info"></div>
+        <div class="top-info">Some random information.</div>
         <div class="top-content">
-            <div class="top-box">
-                <div class="tb-1"></div>
-                <div class="tb-2"></div>
-                <div class="tb-2"></div>
+            <div class="top-box1">
+                <div class="a-box"></div>
+                <div class="a-box"></div>
+                <div class="a-box"></div>
+                <div class="a-box"></div>
             </div>
+            <div class="top-box2">
+                <div class="b-box">this is some subtext under an illustration or image</div>
+                <div class="b-box">this is some subtext under an illustration or image</div>
+                <div class="b-box">this is some subtext under an illustration or image</div>
+                <div class="b-box">this is some subtext under an illustration or image</div>                
+            </div>    
         </div>
     </div>
 
+
     <div class="middle">
-        <div class="middle-content">
-            <div class="mc-box"></div>
+        <div class="middle-content">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <div class="mc-box">-Thor, God of Thunder</div>
         </div>
     </div>
+
 
     <div class="bottom">
         <div class="bottom-content-1"></div>
