Fullført landing page. Mangler litt justering av størrelser for å være 100%

--- a/index.html
+++ b/index.html
@@ -69,12 +69,20 @@
 
 
     <div class="bottom">
-        <div class="bottom-content-1"></div>
-        <div class="bottom-content-2"></div>
+        <div class="bottom-main">
+            <div class="bottom1">
+                <div class="bottom-1a">Call to action! It's time!</div>
+                <div class="bottom-1b">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="bottom2">
+                <button class="bottom-button">Sign up</button>
+            </div>
+        </div>
     </div>
+  
 
     <div class="footer">
-        
+        Copyright © The Odin Project 2021
     </div>
     
 
